SLING-4757 - BasicInitialContentIT tests content installation from a test bundle
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1687365 13f79535-47bb-0310-9956-ffa450edef68